--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -326,21 +326,7 @@ We evaluated the (meta)data quality of large real world data sets (more than 4.2
 \section{Motivation}
 \label{motivation}
 
-\tb{metadata on person-level or more generally record-unit data sets (i.e., data about individuals, households, businesses)}
-
-For more than a decade, members of the community around research data for the \emph{social, behavioural, and economic (SBE) sciences} have been developing and using a
-metadata standard (composed of almost twelve hundred metadata fields) known as the \emph{Data Documentation Initiative (DDI)} \cite{Vardigan2008}.
-\emph{DDI} is an XML format designed to support the dissemination, management,
-and reuse of the data collected and archived for research purposes.  
-%DDI is heavily used by the CESSDA community of European national data archives, 
-%the International Household Survey Network community (made up of more than 90 statistical agencies),
-%and ICPSR - the largest SBE data archive in the US.
-Increasingly, data professionals, data archives, data libraries, government statisticians (e.g. \url{data.gov}, \url{data.gov.uk}), and national statistical institutes
-are very interested in having their data be discovered and used by providing their metadata (e.g. about unemployment rates or income) on the web in form of RDF.
-Recently, members of the SBE and Linked Data community developed the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}}, 
-an effort to leverage the mature DDI metadata model for the purposes of exposing DDI metadata as resources within the Web of Linked Data. 
-
-The data most often used in research within the SBE community is \emph{person-level data}, i.e. data collected about individuals, businesses, and households, in form of responses to studies or taken from administrative registers
+The data most often used in research within the \emph{SBE} community is \emph{person-level data} or more generally \emph{record-unit data}, i.e., data collected about individuals, businesses, and households, in form of responses to studies or taken from administrative registers
 (such as hospital records, registers of births and deaths). 
 The range of person-level data is very broad - 
 including census, education, and health data as well as all types of business, social, and labor force surveys.  
@@ -350,8 +336,8 @@ reused by future researchers.
 In performing their research, the detailed person-level
 data is aggregated into less confidential multi-dimensional tables which answer particular research questions.
 Portals harvest metadata (as well as publicly available data) from multiple data providers in form of RDF.
-To ensure high quality, the metadata must satisfy certain criteria - specified in terms of RDF constraints.  
-After validating the metadata according to these constraints, portals offer added values to their customers, e.g., by searching over and comparing metadata of multiple providers. 
+To ensure high quality, (meta)data must satisfy certain criteria - specified in terms of RDF constraints.  
+%After validating the metadata according to these constraints, portals offer added values to their customers, e.g., by searching over and comparing metadata of multiple providers. 
 
 By its nature, person-level data is highly confidential and access is often only permitted for qualified researchers who must apply for access. 
 The purpose of publicly available aggregated data, on the other hand, is to get a first overview and to gain an interest in further analyses on the underlying person-level data.
@@ -361,16 +347,17 @@ Aggregated data is derived from person-level data by statistics on groups or agg
 %The SDMX metadata standard – used as the basis for \emph{QB} – and DDI have traditionally made efforts to align their content. 
 %Similarly, some of the developers of \emph{Disco} were also involved in the development of \emph{QB}, 
 %allowing the RDF versions of these standards to retain that alignment.
-While \emph{Disco} and \emph{QB} provide terms for the description of data sets, 
-both on a different level of aggregation, 
-the \emph{Data Catalog Vocabulary (DCAT)}\footnote{\url{http://www.w3.org/TR/vocab-dcat/}} enables the representation of these data sets inside of data collections like repositories, catalogs, or archives. 
-The relationship between data collections and their contained data sets is useful, since such collections are a typical entry point when searching for data.
+%While \emph{Disco} and \emph{QB} provide terms for the description of data sets, 
+%both on a different level of aggregation, 
+%the \emph{Data Catalog Vocabulary (DCAT)}\footnote{\url{http://www.w3.org/TR/vocab-dcat/}} enables the representation of these data sets inside of data collections like repositories, catalogs, or archives. 
+%The relationship between data collections and their contained data sets is useful, since such collections are a typical entry point when searching for data.
 %Although, in most cases aggregated data is still published in form of PDFs, 
 %it is more and more common to publish aggregated data as CSV files,
+
 Aggregated data is more and more published as CSV files,
 allowing to perform first data calculations.
 %For these calculations, definitions of the columns are needed (e.g. is a given variable interpreted numerically or as a string).
-In 2014, SBE and Linked Data community members developed the \emph{Physical Data Description (PHDD)}\footnote{\url{https://github.com/linked-statistics/physical-data-description}} vocabulary to represent data in a rectangular format.\tb{tabular data} 
+\emph{Physical Data Description (PHDD)}\footnote{\url{https://github.com/linked-statistics/physical-data-description}} is a vocabulary to represent data in tabular format in RDF.\tb{tabular data} 
 The data could be either represented in records with character-separated values (CSV) or in records with fixed length. 
 
 For more detailed analyses, researchers refer to person-level data from which aggregated data is derived from, 
@@ -401,57 +388,72 @@ i.e. are the variables' code lists theoretically comparable, and (2) if variable
 With technology-driven constraints, it can be validated (1) if variable definitions are available and (2) if for each code an associated category (a human-readable label) is specified.
 
 %\textbf{Data validation.}
-Data providers and harvesters do not only offer metadata but also publicly available data on different level of aggregation.
-To ensure high data quality, they have to check provenance information and to analyze and therefore validate the data according to predefined constraints (e.g. 'are fundamental data fragments available?', and 'how does valid data look like?'). 
+%Data providers and harvesters do not only offer metadata but also publicly available data on different level of aggregation.
+%To ensure high data quality, they have to check provenance information and to analyze and therefore validate the data according to predefined constraints (e.g. 'are fundamental data fragments available?', and 'how does valid data look like?'). 
 %They validate, e.g., if fundamental data parts are available and define how valid data should look like (using syntactic rules).
 %Provenance (where does the data come from?) is an important aspect in evaluating data quality.
 %As data searchers know exactly which data sources they trust and which are reasonable to meet their individual use cases, 
 %RDF data validation can only be performed semi-automatically, i.e., an automatic approach serves as basis for intellectual decisions. 
+
+%For more than a decade, members of the community around research data for the \emph{social, behavioural, and economic (SBE) sciences} have been developing and using a
+%metadata standard, composed of almost twelve hundred metadata fields, known as the \emph{Data Documentation Initiative (DDI)},
+%an XML format to disseminate, manage,
+%and reuse data collected and archived for research \cite{Vardigan2008}.  
+%%DDI is heavily used by the CESSDA community of European national data archives, 
+%%the International Household Survey Network community (made up of more than 90 statistical agencies),
+%%and ICPSR - the largest SBE data archive in the US.
+%Increasingly, data professionals, data archives, data libraries, government statisticians (e.g. \url{data.gov}, \url{data.gov.uk}), and national statistical institutes
+%are very interested in having their data be discovered and used by providing their metadata (e.g. about unemployment rates or income) on the web in form of RDF.
+%Recently, members of the \emph{SBE} and Linked Data community developed the \emph{DDI-RDF Discovery Vocabulary (Disco)}\footnote{\url{http://rdf-vocabulary.ddialliance.org/discovery.html}}, 
+%an effort to expose \emph{DDI} metadata within the Web of Linked Data. 
 
 %\section{Running Example}
 %\label{running-example}
 \section{Vocabularies to Represent Metadata and Data in RDF}
 \label{rdf-representation}
 
-In this section, we describe how data in rectangular format (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), thesauri (\emph{SKOS}), and statistical classifications (\emph{XKOS}) are represented in RDF\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}} and how therefore reused vocabularies are interrelated.
+%In this section, we describe how data in rectangular format (\emph{PHDD}) and metadata on person-level data sets (\emph{Disco}), aggregated data sets (\emph{QB}), thesauri (\emph{SKOS}), and statistical classifications (\emph{XKOS}) are represented in RDF\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}} and how therefore reused vocabularies are interrelated.
 
-\textbf{Metadata on Aggregated Data.}
-The vocabulary \emph{QB} represents metadata on multi-dimensional aggregate data in two files, a \emph{qb:DataSet} and a \emph{qb:DataStructureDefinition}.
-The \emph{qb:DataStructureDefinition} contains metadata of the present data collection.
-Thereby, the variable \emph{formal childcare} is modelled as \emph{qb:measure}, since it stands for what has been measured in the data collection.
-The variables \emph{year}, \emph{duration}, \emph{age}, and \emph{country} are defined as \emph{qb:dimension}.
+%\textbf{Metadata on Aggregated Data.}
+\emph{QB} represents metadata on multi-dimensional aggregate data in two files: a \emph{qb:DataSet} and a \emph{qb:DataStructureDefinition}.
+The \emph{qb:DataStructureDefinition} contains metadata of the data collection.
+The variable \emph{formal childcare} is modelled as \emph{qb:measure}, since it stands for what has been measured in the data collection.
+The variables \emph{year}, \emph{duration}, \emph{age}, and \emph{country} are \emph{qb:dimensions}.
 Data values, i.e., the availability of childcare services in percent over the population, are collected in a \emph{qb:DataSet}. 
-Each data value is represented inside a \emph{qb:Observation} which additionally contains values for each dimension 
-(e.g., the year in which \emph{formal childcare} has been determined).
+Each data value is represented inside a \emph{qb:Observation} which contains values for each dimension\footnote{The complete running example in RDF is available at: \url{https://github.com/boschthomas/rdf-validation/tree/master/data/running-example}}. 
+%(e.g., the year in which \emph{formal childcare} has been determined).
 
-\textbf{Rectangular Data.}
-\emph{PHDD} represents data in a rectangular format in RDF. 
+%\textbf{Rectangular Data.}
+\emph{PHDD} represents data in tabular format in RDF enabling further aggregations and calculations. 
 The data could be either represented in records with character-separated values (CSV) or fixed length. 
-Eurostat provides the two-dimensional table about \emph{formal childcare} in form of a CSV file. 
-The \emph{phdd:Table} is structured by a table structure (\emph{phdd:TableStructure}, \emph{phdd:Delimited}).
-The table structure includes information about the character set (\emph{ASCII}), the variable delimiter (\emph{,}), the new line marker (\emph{CRLF}), and the first line where the data starts (\emph{2}).
+\emph{Eurostat} provides a CSV file, a two-dimensional table (\emph{phdd:Table}) about \emph{formal childcare} 
+which is structured by a table structure (\emph{phdd:TableStructure}, \emph{phdd:Delimited})
+including information about the character set (\emph{ASCII}), the variable delimiter (\emph{,}), the new line marker (\emph{CRLF}), and the first line where the data starts (\emph{2}).
 The table structure is related to table columns (\emph{phdd:Column}) which are described by column descriptions (\emph{phdd:DelimitedColumnDescription}).
 For the column containing the cell values in percent, the column position (\emph{5}), the recommended data type (\emph{xsd:nonNegativeInteger}), and the storage format (\emph{TINYINT}) is stated. 
-The RDFication enables further aggregations and calculations, e.g., in order to compare \emph{formal childcare} between Northern and Southern Europe or between otherwise grouped countries.
+%The RDFication enables further aggregations and calculations, e.g., in order to compare \emph{formal childcare} between Northern and Southern Europe or between otherwise grouped countries.
 % macht mehr sinn wenn Tabelle in mehreren Dimensionen vorhanden ist ode wenn Klassifikationen wie ISCO verwendet werden 
 
-\textbf{Metadata on Person-Level Data.}
-For a broader view of the data framework and more detailed analyses we refer to the metadata on person-level data collected for the series \emph{EU-SILC (European Union Statistics on Income and Living Conditions)}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC}} 
-published by the \emph{Microdata Information System (MISSY)}\footnote{\url{http://www.gesis.org/missy/eu/missy-home}}.
+%\textbf{Metadata on Person-Level Data.}
+For more detailed analyses we refer to the metadata on person-level data collected for the series \emph{EU-SILC (European Union Statistics on Income and Living Conditions)}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC}}. 
+%published by the \emph{Microdata Information System (MISSY)}\footnote{\url{http://www.gesis.org/missy/eu/missy-home}}.
 Where data collection is cyclic, data sets may be released as \emph{series}, 
-where each cycle of the data collection activity produces one or more data sets. 
-\emph{Missy} is an online service platform that provides systematically structured metadata for official statistics on European person-level data sets. 
+where each cycle produces one or more data sets. 
+%\emph{Missy} is an online service platform that provides systematically structured metadata for official statistics on European person-level data sets. 
 %This includes data documentation at the study and variable level as well as documentation materials, tools and further information. 
 Aggregated (qb:DataSet) and underlying person-level data sets (\emph{disco:LogicalDataSet}) are connected by \emph{prov:wasDerivedFrom}. 
-The aggregated variable \emph{formal childcare} is calculated on the basis of six person-level variables like 
-\emph{Education at pre-school}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC/2011/Cross-sectional/original#2011-Cross-sectional-RL010}}.
+The aggregated variable \emph{formal childcare} is calculated on the basis of six person-level variables 
+(e.g., \emph{Education at pre-school}\footnote{\url{http://www.gesis.org/missy/eu/metadata/EU-SILC/2011/Cross-sectional/original#2011-Cross-sectional-RL010}})
 %(2) Education at compulsory school,
 %(3) Child care at centre-based services,
 %(4) Child care at day-care centre,
 %(5) Child care by a professional child-minder, and
 %(6) Child care by grand-parents, household members, relatives, friends, neighbours.
-For each person-level variable detailed metadata is given (definitions, descriptions, theoretical concepts, questions variables are based on, code lists, frequencies, descriptive statistics, countries, year of data collection, and classifications) which enables researchers to replicate the results shown in the aggregated data tables from Eurostat.
-The vocabulary \emph{Disco} represents metadata on person-level data in RDF.
+for which detailed metadata is given 
+%(definitions, descriptions, theoretical concepts, questions variables are based on, code lists, frequencies, descriptive statistics, countries, year of data collection, and classifications) 
+(e.g., code lists)
+enabling researchers to replicate the results shown in aggregated data tables.
+The \emph{DDI-RDF Discovery Vocabulary (Disco)} is a vocabulary to represent metadata on person-level data in RDF.
 The series (\emph{disco:StudyGroup}) \emph{EU-SILC} contains one study (\emph{disco:Study}) for each year (\emph{dcterms:temporal}) of data collection.   
 \emph{dcterms:spatial} points to the countries for which the data has been collected.
 The study \emph{EU-SILC 2011} contains eight person-level data sets (\emph{disco:LogicalDataSet})
@@ -460,18 +462,18 @@ including person-level variables (\emph{disco:Variable}) like the six ones neede
 %One common research question is ,e.g., the comparison of variables like 
 %\emph{formal childcare} between countries, for which the variable is collected within the context of an individual study, and other European or non European countries (e.g. OSCE).
 
-\textbf{Organizations, Hierarchies, and Classifications.}
+%\textbf{Organizations, Hierarchies, and Classifications.}
 %\textbf{Reusing SKOS.}
-The \emph{Simple Knowledge Organization System (SKOS)} is reused multiple times to represent metadata on aggregated and person-level data.
+The \emph{Simple Knowledge Organization System (SKOS)} is reused multiple times to build \emph{SBE} vocabularies.
 Variables are constructed out of values and/or (un)ordered code lists.
 The codes of the variable \emph{Education at pre-school} (number of education hours per week) are modeled as \emph{skos:Concepts} and 
 a \emph{skos:OrderedCollection} organizes them in a particular order within a \emph{skos:memberList}.
-A variable may be associated with a theoretical concept (\emph{skos:Concept}) and   
-\emph{skos:narrower} builds the hierarchy of theoretical concepts within the \emph{skos:ConceptScheme} of a series.
-The variable \emph{Education at pre-school}, e.g., is assigned to the theoretical concept \emph{Child Care} which is the narrower concept of \emph{Education} - one of the top concepts of the series \emph{EU-SILC}.
+A variable may be associated with a theoretical concept (\emph{skos:Concept}). 
+\emph{skos:narrower} builds the hierarchy of theoretical concepts within a \emph{skos:ConceptScheme} of a series.
+The variable \emph{Education at pre-school} is assigned to the theoretical concept \emph{Child Care} which is the narrower concept of \emph{Education} - one of the top concepts of the series \emph{EU-SILC}.
 Controlled vocabularies (\emph{skos:ConceptScheme}), serving as extension and reuse mechanism,
-organize types (\emph{skos:Concept}) of descriptive statistics (\emph{\emph{disco:SummaryStatistics}}) like minimum, maximum, and arithmetic mean.
-\emph{XKOS}\footnote{\url{https://github.com/linked-statistics/xkos}} is a SKOS extension to describe formal statistical classifications like the International Standard Classification of Occupations (\emph{ISCO}). 
+organize types (\emph{skos:Concept}) of descriptive statistics (\emph{disco:SummaryStatistics}) like minimum, maximum, and arithmetic mean.
+%\emph{XKOS}\footnote{\url{https://github.com/linked-statistics/xkos}} is a SKOS extension to describe formal statistical classifications like the International Standard Classification of Occupations (\emph{ISCO}). 
 %and the Statistical Classification of Economic Activities in the European Community \emph{NACE}.
 
 %\textbf{Searching for (Meta)data.}
